--- a/views/results.jade
+++ b/views/results.jade
@@ -1,11 +1,6 @@
 extends layout.jade
 block content
-    h1 Our Catalog
-    .row
-      .col-md-4.col-md-offset-4
-        form(action="/search/:keyword" method ='post' clas='form-inline')
-          input(type='text', name = 'keyword' class='form-control' placeholder = "Search Books")
-          input(type='submit' class='btn btn-primary')
+    h1 Search Result
     .row
       .col-md-8.col-md-offset-2
         table.table
@@ -14,7 +9,7 @@ block content
               th Books
               th Price
           tbody
-            each book in books
+            each result in results
               tr
                 td
                   a(href="/books/#{$index}") #{book.name}
