removed edit button on single books and fixed form style for search

--- a/views/list.jade
+++ b/views/list.jade
@@ -2,12 +2,15 @@ extends layout.jade
 block content
     h1 Our Catalog
     .row
-      .col-md-4.col-md-offset-4
-        form(action="/search/:keyword" method ='post' clas='form-inline')
-          input(type='text', name = 'keyword' class='form-control' placeholder = "Search Books")
-          input(type='submit' class='btn btn-primary')
+      .col-md-4
+        form(action="/search/:keyword" method ='post' class='form-inline')
+          .form-group
+            label(for="keyword")
+            input(type='text', name='keyword' class='form-control' placeholder = "Name of the Book")
+          .form-group
+            input(type='submit' class='btn btn-primary' value='Search')
     .row
-      .col-md-8.col-md-offset-2
+      .col-md-8
         table.table
           thead
             tr
