--- a/views/single.jade
+++ b/views/single.jade
@@ -3,4 +3,4 @@ block content
   .row
     .col-md-4
       p You have selected #{book.name} and the cost is Rs. #{book.price}
-      a(href="#" class="btn btn-primary") Edit Book
+      a(href="/books" class="btn btn-primary") Back to Catalog
