removed :keyword from route. added a result message with result number.

--- a/views/list.jade
+++ b/views/list.jade
@@ -3,7 +3,7 @@ block content
     h1 Our Catalog
     .row
       .col-md-4
-        form(action="/search/:keyword" method ='post' class='form-inline')
+        form(action="/search" method ='post' class='form-inline')
           .form-group
             label(for="keyword")
             input(type='text', name='keyword' class='form-control' placeholder = "Name of the Book")
